--- a/prezenty.html
+++ b/prezenty.html
@@ -81,11 +81,30 @@ Całkowity dochód ze sprzedaży przeznaczony będzie <span style="white-space:n
      <!-- kosmetyki inglot-->
       <h2>Kosmetyki INGLOT</h2>
         <div class="goods" id="kosmetyki"> 
-        <div class="book-03"><img src="img/inglot_ciene_do_powiek.jpg"><b>Zestaw cieni do powiek INGLOT Freedom System</b>Zestaw 6 cieni do powiek<br/>w opakowaniu dekorowanym<br/>kryształkami Swarovskiego.<br/><i>120 PLN</i><!--span class="payment">Opłata przy odbiorze!</span--></div>
-        <div class="book-03"><img src="img/inglot_zestaw_lipstick_maskara.jpg"><b>INGLOT Zestaw prezentowy</b>Szminka Q10 Lipstick, kolor 48 More than Red<br/>oraz czarny tusz do rzęs False Lash Effect Mascara.<br/>Wszystko zapakowane w ozdobny czarny, aksamitny woreczek że złotym napisem.<br/><i>120 PLN</i><!--span class="payment">Opłata przy odbiorze!</span--></div>     
+        <div class="book-03"><img src="img/inglot_ciene_do_powiek.jpg"><b>Zestaw cieni do powiek INGLOT Freedom System</b>Zestaw 6 cieni do powiek<br/>w opakowaniu dekorowanym<br/>kryształkami Swarovskiego.<i>120 PLN</i><!--span class="payment">Opłata przy odbiorze!</span--></div>
+        <div class="book-03"><img src="img/inglot_zestaw_lipstick_maskara.jpg"><b>INGLOT Zestaw prezentowy</b>Szminka Q10 Lipstick, kolor 48 More than Red<br/>oraz czarny tusz do rzęs False Lash Effect Mascara.<br/>Wszystko zapakowane w ozdobny czarny, aksamitny woreczek że złotym napisem.<i>120 PLN</i><!--span class="payment">Opłata przy odbiorze!</span--></div>     
         <div class="br"></div>             
    </div>
         <!--/kosmetyki inglot-->
+	<!-- kosmetyki dr irena-->
+      <h2>Kosmetyki Dr. Irena Eris</h2>
+        <div class="goods"> 
+        <div class="book-03"><img src="img/irena_oczy.jpg"><b>Krem pod oczy Dr Irena Eris, Institute Solutions, Neuro Filler.</b><i>120 PLN</i><!--span class="payment">Opłata przy odbiorze!</span--></div>
+        <div class="book-03"><img src="img/irena_force.jpg"><b>Krem na noc Dr Irena Eris, Institute Solutions, L-ascorbic Power Treatment.</b>.<i>200 PLN</i><!--span class="payment">Opłata przy odbiorze!</span--></div> 
+	<div class="book-03"><img src="img/irena_dzien.jpg"><b>Krem na dzień Dr Irena Eris, VitaCeric.</b><i>140 PLN</i><!--span class="payment">Opłata przy odbiorze!</span--></div>    
+        <div class="br"></div>             
+   </div>
+        <!--/kosmetyki dr irena--> 
+	<!--kosmetyki Lirene-->
+	  <h2>Kosmetyki Lirene</h2>
+        <div class="goods"> 
+        <div class="book-03"><img src="img/lirene_zestaw.jpg"><b>Zestaw kosmetyków Lirene</b>Krem na dzień i noc energia witamin,dla cery wrażliwej i suchej.
+Serum pod oczy i na skórę szyi, energia witamin.<i>50 PLN</i><!--span class="payment">Opłata przy odbiorze!</span--></div>
+        <div class="br"></div>             
+   </div>
+        <!--/kosmetyki Lirene-->
+  
+	  
         <!-- contacts-->
         <h2>Kontakt</h2>
           <div class="goods" id="contact">
