--- a/prezenty.html
+++ b/prezenty.html
@@ -89,17 +89,17 @@ Całkowity dochód ze sprzedaży przeznaczony będzie <span style="white-space:n
 	<!-- kosmetyki dr irena-->
       <h2>Kosmetyki Dr. Irena Eris</h2>
         <div class="goods"> 
-        <div class="book-03"><img src="img/irena_oczy.jpg"><b>Krem pod oczy Dr Irena Eris, Institute Solutions, Neuro Filler.</b><i>120 PLN</i><!--span class="payment">Opłata przy odbiorze!</span--></div>
-        <div class="book-03"><img src="img/irena_force.jpg"><b>Krem na noc Dr Irena Eris, Institute Solutions, L-ascorbic Power Treatment.</b>.<i>200 PLN</i><!--span class="payment">Opłata przy odbiorze!</span--></div> 
-	<div class="book-03"><img src="img/irena_dzien.jpg"><b>Krem na dzień Dr Irena Eris, VitaCeric.</b><i>140 PLN</i><!--span class="payment">Opłata przy odbiorze!</span--></div>    
+        <div class="book-03"><img src="img/irena_oczy.jpg"><b>Krem pod oczy Dr Irena Eris,<br/>Institute Solutions, Neuro Filler.</b><i>120 PLN</i><!--span class="payment">Opłata przy odbiorze!</span--></div>
+        <div class="book-03"><img src="img/irena_force.jpg"><b>Krem na noc Dr Irena Eris,<br/>Institute Solutions, L-ascorbic Power Treatment.</b>.<i>200 PLN</i><!--span class="payment">Opłata przy odbiorze!</span--></div> 
+	<div class="book-03"><img src="img/irena_dzien.jpg"><b>Krem na dzień Dr Irena Eris,<br/>VitaCeric.</b><i>140 PLN</i><!--span class="payment">Opłata przy odbiorze!</span--></div>    
         <div class="br"></div>             
    </div>
         <!--/kosmetyki dr irena--> 
 	<!--kosmetyki Lirene-->
 	  <h2>Kosmetyki Lirene</h2>
         <div class="goods"> 
-        <div class="book-03"><img src="img/lirene_zestaw.jpg"><b>Zestaw kosmetyków Lirene</b>Krem na dzień i noc energia witamin,dla cery wrażliwej i suchej.
-Serum pod oczy i na skórę szyi, energia witamin.<i>50 PLN</i><!--span class="payment">Opłata przy odbiorze!</span--></div>
+        <div class="book-03"><img src="img/lirene_zestaw.jpg"><b>Zestaw kosmetyków Lirene</b>Krem na dzień<br/>i noc energia witamin,<br/>dla cery wrażliwej i suchej.
+Serum pod oczy i na skórę szyi,<br/>energia witamin.<i>50 PLN</i><!--span class="payment">Opłata przy odbiorze!</span--></div>
         <div class="br"></div>             
    </div>
         <!--/kosmetyki Lirene-->
