--- a/prezenty.html
+++ b/prezenty.html
@@ -98,8 +98,8 @@ Całkowity dochód ze sprzedaży przeznaczony będzie <span style="white-space:n
 	<!--kosmetyki Lirene-->
 	  <h2>Kosmetyki Lirene</h2>
         <div class="goods"> 
-        <div class="book-03"><img src="img/lirene_zestaw.jpg"><b>Zestaw kosmetyków Lirene</b>Krem na dzień i noc<br/>Energia witamin, dla cery wrażliwej i suchej.<br/>
-Serum pod oczy i na skórę szyi, Energia witamin.<i>50 PLN</i><!--span class="payment">Opłata przy odbiorze!</span--></div>
+        <div class="book-03"><img src="img/lirene_zestaw.jpg"><b>Zestaw kosmetyków Lirene Energia witamin</b>Krem na dzień i noc dla cery wrażliwej i suchej.<br/>
+Serum pod oczy i na skórę szyi.<i>50 PLN</i><!--span class="payment">Opłata przy odbiorze!</span--></div>
         <div class="br"></div>             
    </div>
         <!--/kosmetyki Lirene-->
