--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
         <div class="main">
      <!-- top menu-->
         <div class="topmenu-wrap">
-<div class="topmenu"><a href="#ozdoby_choinkowe">Ozdoby&nbsp;choinkowe</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#handmade">Handmade</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#contact">Kontakt</a></div></div><div class="br"></div>
+<div class="topmenu"><a href="/index.html#ozdoby_choinkowe">Ozdoby&nbsp;choinkowe</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/index.html#handmade">Handmade</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+	<a href="/prezenty.html#pierniki">Pierniki</a><sup>NEW!</sup>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/prezenty.html#kosmetyki">Kosmetyki</a><sup>NEW!</sup>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#contact">Kontakt</a></div></div><div class="br"></div>
  </div><div class="br"></div>
    <!-- /top menu-->
      <!-- main container -->   
