--- a/prezenty.html
+++ b/prezenty.html
@@ -60,7 +60,7 @@
    <!-- /top menu-->
      <!-- main container -->   
   <div class="main-container">
-     <div class="anonce">Przedstawiamy prezenty.... <p><b>Drodzy Mikołajowie! Połączcie przyjemne z pożytecznym!</b></p>
+     <div class="anonce">Przedstawiamy prezenty<p><b>Drodzy Mikołajowie! Połączcie przyjemne z pożytecznym!</b></p>
 <p>Serdecznie zapraszamy do zakupów online, opłata za pośrednictwem eSkarbonki  wolontariuszki naszego sztabu (Visa, Mastercard, Maestro, Paypal).<br/>
 Całkowity dochód ze sprzedaży przeznaczony będzie <span style="white-space:nowrap;">na cele 30. Finału WOŚP,</span> czyli zakup sprzętu dla zapewnienia najwyższych standardów diagnostyki i leczenia wzroku u dzieci.</p>
 <p><span class="red">!&nbsp;</span><b>Odbiór Ambasada RP, Bolshoy Tishinsky Pereulok. <span style="white-space:nowrap;">Telefon kontaktowy <a href="tel:+79164650667" class="phone">+7 916 465 06 67</a></span></b></p>
