--- a/index.html
+++ b/index.html
@@ -54,61 +54,12 @@
         <div class="main">
      <!-- top menu-->
         <div class="topmenu-wrap">
-<div class="topmenu"><a href="/index.html" class="home" title="WOŚP Moskwa">&nbsp;</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/index.html#ozdoby_choinkowe">Ozdoby&nbsp;choinkowe</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/index.html#handmade">Handmade</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-	<a href="/prezenty.html#pierniki">Pierniki</a><sup>NEW!</sup>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/prezenty.html#kosmetyki">Kosmetyki</a><sup>NEW!</sup>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#contact">Kontakt</a></div></div><div class="br"></div>
+<div class="topmenu"><a href="/index.html" class="home" title="WOŚP Moskwa"><!-- &nbsp;</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/index.html#ozdoby_choinkowe">Ozdoby&nbsp;choinkowe</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/index.html#handmade">Handmade</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+	<a href="/prezenty.html#pierniki">Pierniki</a><sup>NEW!</sup>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/prezenty.html#kosmetyki">Kosmetyki</a><sup>NEW!</sup>&nbsp;&nbsp;|&nbsp;&nbsp;--><a href="#contact">Kontakt</a></div></div><div class="br"></div>
  </div><div class="br"></div>
    <!-- /top menu-->
      <!-- main container -->   
-  <div class="main-container">
-     <div class="anonce">Przedstawiamy dzieła moskiewskich Polek, przygotowane z miłością dla wsparcia celów 30 Finału: niepowtarzalne ręcznie robione ozdoby świąteczne i prezenty. <p><b>Drodzy Mikołajowie! Połączcie przyjemne z pożytecznym!</b></p>
-<p>Serdecznie zapraszamy do zakupów online, opłata za pośrednictwem eSkarbonki naszego sztabu.<br/>
-Całkowity dochód ze sprzedaży przeznaczony będzie na cele 30. Finału WOŚP, czyli zakup sprzętu dla zapewnienia najwyższych standardów diagnostyki i leczenia wzroku u dzieci.</p>
-<p><span class="red">!&nbsp;</span><b>Zanim opłacą Państwo dany towar ogromna prośba o kontakt <a href="mailto:wosp.moskwa@gmail.com">wosp.moskwa@gmail.com</a>, +7 915 2007192 (Bogna), +7 925 3205824 (Ania) — musimy ustalić, czy jesteśmy w stanie dostarczyć państwu zakup.</b></p>
-<p>Projekt działa dzięki pracy wolontariuszy, nie jesteśmy sklepem internetowym z kurierami, ale dołożymy wszelkich starań, żeby przekazać Państwu wszystkie towary w krótkim czasie.</p>
-<p>Opłata za towary przed dostawą za pośrednictwem eSkarbonki naszego sztabu (Visa, Mastercard, Maestro, Paypal)</p>
-              
-    <div class="br"></div>
-          <a href="https://eskarbonka.wosp.org.pl/fc8xc4" target="_blank" class="eskarbonka" title="eSkarbonka"><b>eSkarbonka</b> obsługuje wszystkie karty Visa i Mastercard                      
-          </a>
-      </div> 
-            <!--div class="rezerw"></div-->
-      <h1>Ceny PLN</h1>
-      <!-- Ozdoby choinkowe-->
-        <h2>Ozdoby choinkowe</h2>
-         <div class="goods" id="ozdoby_choinkowe">  
-             <div class="book-01 book-02"><img src="img/aniols.jpg"><b>Aniołki</b><i>50 PLN (4 szt.)</i></div>  
-             <div class="book-01"><img src="img/matrioszki_02.jpg" title="Matrioszki"><b>Matrioszki ~12 cm</b><i>25 PLN (1 szt.)</i></div>  
-             <div class="book-01"><img src="img/choinka_02.jpg"><b>Ozdoba #2</b><i>25 PLN</i></div>
-              <!--div class="book-01"><img src="img/choinka_05.jpg"><b>Ozdoba #5</b><i>25 PLN</i></div-->            
-              <!--div class="book-01"><img src="img/choinka_04.jpg"><b>Ozdoba #4</b><i>25 PLN</i></div-->  
-            <div class="book-01"><img src="img/choinka_014.jpg"><b>Ozdoba #14</b><i>25 PLN</i></div>         
-            <div class="book-01"><img src="img/choinka_08.jpg"><b>Ozdoba #8</b><i>25 PLN</i></div>
-             <!--div class="book-01"><img src="img/choinka_012.jpg"><b>Ozdoba #12</b><i>25 PLN</i></div-->
-             <div class="book-01 book-02"><img src="img/ozdobe_2053_l.jpg"><b>Ozdoby #2053</b> <i>25 PLN (1 szt.)</i><br/><i>50 PLN (4 szt.)</i></div> 
-             <div class="book-01 book-02"><img src="img/balwan_2055_l.jpg"><b>Bałwany #2055</b> <i>25 PLN (1 szt.)</i><br/><i>40 PLN (2 szt.)</i></div>
-             <!--div class="book-01 book-02"><img src="img/choinka_new_01.jpg"><b>Choinka #1 H=~50 cm</b><i>2500 Rub / 122 PLN</i></div--> 
-            <div class="book-01 book-02"><img src="img/ania_01_l.jpg"><b>Stroik #5 D=~50cm</b> <i>147 PLN</i></div>
-              <div class="book-01 book-02"><img src="img/stroik_2066_l.jpg"><b>Stroik #2066 D=~50cm</b><i>98 PLN</i></div>
-              <div class="book-01 book-02"><img src="img/ania_05_l.jpg"><b>Stroik #7 D=~50cm</b><i>170 PLN</i></div>
-             <div class="book-01 book-02"><img src="img/stroik_2062_l.jpg"><b>Stroik #2062 50x30cm</b><i>147 PLN</i></div>            
-             <div class="br"></div>  
-             <div class="book-01"><img src="img/ozdobe_2057.jpg"><b>Zestaw<br/>ozdób choinkowych</b> <i>25 PLN</i></div>
-             <div class="book-01"><img src="img/ozdoba_2058.jpg"><b>Ozdoba #2058</b> <i>25 PLN</i></div>
-             <div class="book-01"><img src="img/ozdoba_2059.jpg"><b>Ozdoba #2059</b> <i>25 PLN</i></div>
-             <div class="book-01"><img src="img/pilka_2065.jpg"><b>Ozdoba #2065</b> <i>25 PLN</i></div>            
-             <div class="br"></div>             
-   </div>
-        <!--/Ozdoby choinkowe-->      
-     <!-- handmade-->
-      <h2>Handmade</h2>
-        <div class="goods" id="handmade"> 
-        <div class="book-01"><img src="img/jr_01.jpg"><b>Jednorożec #1</b> <i>Broszka ~3 cm<br/>25 PLN</i></div>
-        <!--div class="book-01"><img src="img/jr_02.jpg"><b>Jednorożec #2</b> <i>Broszka, ~3-4 cm</i></div-->
-        <div class="book-01"><img src="img/jednorozec_2061.jpg"><b>Jednorożec #3</b> <i>Broszka ~3 cm <br/>25 PLN</i></div>     
-       <div class="book-01"><img src="img/podkladki_01.jpg"><b>Podkładki, zestaw 4 szt.</b> <i>35 PLN</i></div>
-          <div class="br"></div>             
-   </div>
-        <!--/handmade-->
+ 
         <!-- contacts-->
         <h2>Kontakt</h2>
           <div class="goods" id="contact">
