--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
  </div><div class="br"></div>
    <!-- /top menu-->
      <!-- main container -->   
- 
+ <div class="main-container">
         <!-- contacts-->
         <h2>Kontakt</h2>
           <div class="goods" id="contact">
