--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
    <!-- /top menu-->
      <!-- main container -->   
  <div class="main-container">
+	 <div>Pracujemy nad przygotowaniem finałów Wielkiej Orkiestry Świątecznej Pomocy w Moskwie.</div>
         <!-- contacts-->
         <h2>Kontakt</h2>
           <div class="goods" id="contact">
