--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	    
     </head>
     <body>
-        <div class="banner" title="SZTAB Moskwa zaprasza na targi online na rzecz WOŚP"></div>
+        <div class="banner" title="SZTAB WOŚP Moskwa"></div>
         <div class="main">
      <!-- top menu-->
         <div class="topmenu-wrap">
@@ -60,7 +60,7 @@
    <!-- /top menu-->
      <!-- main container -->   
  <div class="main-container">
-	 <div>Pracujemy nad przygotowaniem finałów Wielkiej Orkiestry Świątecznej Pomocy w Moskwie.</div>
+	 <div style="padding:20px; font-size:20px;">Pracujemy nad przygotowaniem finałów Wielkiej Orkiestry Świątecznej Pomocy w Moskwie.</div>
         <!-- contacts-->
         <h2>Kontakt</h2>
           <div class="goods" id="contact">
