--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <!-- contacts-->
         <h2>Kontakt</h2>
           <div class="goods" id="contact">
-          <div class="contacts"><a href="https://www.facebook.com/WOŚP-Moskwa-100293481406100/" target="_blank" class="face">WOŚP Moskwa Nonprofit Organization</a>
+          <div class="contacts"><!-- a href="https://www.  fac eb ook.com/WOŚP-Moskwa-100293481406100/" target="_blank" class="face">WOŚP Moskwa Nonprofit Organization</a-->
               <a href="mailto:wosp.moskwa@gmail.com" class="wosp">wosp.moskwa@gmail.com</a></div>
               <div class="br"></div><br/>
             </div>     
