--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
      <!-- main container -->   
  <div class="main-container">
 	 <div style="padding:20px; font-size:20px;">Pracujemy nad przygotowaniem finałów Wielkiej Orkiestry Świątecznej Pomocy w Moskwie.</div>
-        <!-- contacts-->
+        <!-- contacts
         <h2>Kontakt</h2>
           <div class="goods" id="contact">
           <div class="contacts"><!-- a href="https://www.  fac eb ook.com/WOŚP-Moskwa-100293481406100/" target="_blank" class="face">WOŚP Moskwa Nonprofit Organization</a-->
               <a href="mailto:wosp.moskwa@gmail.com" class="wosp">wosp.moskwa@gmail.com</a></div>
               <div class="br"></div><br/>
             </div>     
-      <!-- /contacts-->
+      /contacts -->
      </div>
         <!--/ main container -->   
         <!-- Yandex.Metrika counter -->
