--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <meta property="og:image:type" content="image/jpg"> 
 	    
     </head>
-    <body>   
+    <body>   <div style="font-size:24px; margin:100px;">w moskwie w 2023 roku nie gramy</div>
         <!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
