--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <meta property="og:image:type" content="image/jpg"> 
 	    
     </head>
-    <body>   <div style="font-size:24px; text-align:center; margin:100px; auto">w Moskwie w 2023 roku nie będziemy grali :(</div>
+    <body>   <div style="font-size:36px; text-align:center; margin:200px auto">w Moskwie w 2023 roku nie będziemy grali :(</div>
         <!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
